.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:36:15 **** Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-size  STU3_Test.elf 
   text	   data	    bss	    dec	    hex	filename
  39400	    532	   5108	  45040	   aff0	STU3_Test.elf
Finished building: default.size.stdout
 
21:44:00 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Based_System_Communication.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Based_System_Communication.d" -MT"Core/Src/Based_System_Communication.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Based_System_Communication.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:13: warning: unused variable 'lastTick' [-Wunused-variable]
  142 |         int lastTick = 0;
      |             ^~~~~~~~
../Core/Src/Based_System_Communication.c: In function 'set_Target_Position_ten_points':
../Core/Src/Based_System_Communication.c:62:41: error: 'i' undeclared (first use in this function)
   62 |         hmodbus->RegisterAddress[0x20 + i].U16 = point;
      |                                         ^
../Core/Src/Based_System_Communication.c:62:41: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:46: Core/Src/Based_System_Communication.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.
21:44:36 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Based_System_Communication.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Based_System_Communication.d" -MT"Core/Src/Based_System_Communication.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Based_System_Communication.o"
arm-none-eabi-gcc -o "STU3_Test.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Fibo\Year2\Term2\STU\STU_3_Programming\STU3_Programming\STU3_Test\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STU3_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: STU3_Test.elf
 
arm-none-eabi-size  STU3_Test.elf 
arm-none-eabi-objdump -h -S STU3_Test.elf  > "STU3_Test.list"
   text	   data	    bss	    dec	    hex	filename
  39456	    532	   5108	  45096	   b028	STU3_Test.elf
Finished building: default.size.stdout
 
Finished building: STU3_Test.list
 
21:48:12 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:13: warning: unused variable 'lastTick' [-Wunused-variable]
  142 |         int lastTick = 0;
      |             ^~~~~~~~
arm-none-eabi-gcc -o "STU3_Test.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Fibo\Year2\Term2\STU\STU_3_Programming\STU3_Programming\STU3_Test\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STU3_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: STU3_Test.elf
 
arm-none-eabi-size  STU3_Test.elf 
arm-none-eabi-objdump -h -S STU3_Test.elf  > "STU3_Test.list"
   text	   data	    bss	    dec	    hex	filename
  39476	    532	   5108	  45116	   b03c	STU3_Test.elf
Finished building: default.size.stdout
 
Finished building: STU3_Test.list
 
21:49:49 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Based_System_Communication.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Based_System_Communication.d" -MT"Core/Src/Based_System_Communication.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Based_System_Communication.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:13: warning: unused variable 'lastTick' [-Wunused-variable]
  142 |         int lastTick = 0;
      |             ^~~~~~~~
arm-none-eabi-gcc -o "STU3_Test.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Fibo\Year2\Term2\STU\STU_3_Programming\STU3_Programming\STU3_Test\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STU3_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: STU3_Test.elf
 
arm-none-eabi-size  STU3_Test.elf 
arm-none-eabi-objdump -h -S STU3_Test.elf  > "STU3_Test.list"
   text	   data	    bss	    dec	    hex	filename
  39500	    532	   5108	  45140	   b054	STU3_Test.elf
Finished building: default.size.stdout
 
Finished building: STU3_Test.list
 
22:02:15 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Based_System_Communication.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Based_System_Communication.d" -MT"Core/Src/Based_System_Communication.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Based_System_Communication.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:13: warning: unused variable 'lastTick' [-Wunused-variable]
  142 |         int lastTick = 0;
      |             ^~~~~~~~
arm-none-eabi-gcc -o "STU3_Test.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Fibo\Year2\Term2\STU\STU_3_Programming\STU3_Programming\STU3_Test\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STU3_Test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: STU3_Test.elf
 
arm-none-eabi-size  STU3_Test.elf 
arm-none-eabi-objdump -h -S STU3_Test.elf  > "STU3_Test.list"
   text	   data	    bss	    dec	    hex	filename
  39480	    532	   5108	  45120	   b040	STU3_Test.elf
Finished building: default.size.stdout
 
Finished building: STU3_Test.list
 
22:10:58 **** Incremental Build of configuration Debug for project STU3_Test ****
make -j16 all 
arm-none-eabi-size  STU3_Test.elf 
   text	   data	    bss	    dec	    hex	filename
  39480	    532	   5108	  45120	   b040	STU3_Test.elf
Finished building: default.size.stdout
 
